Add new server regions

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1270,10 +1270,28 @@
                                 United Kingdom
                               </a>
                             </li>
+                            <li data-region="GR">
+                              <a href="#" tabindex="-1" class="flag gr"
+                                 data-i18n="settings#egress-region#select-gr">
+                                Greece
+                              </a>
+                            </li>
+                            <li data-region="HR">
+                              <a href="#" tabindex="-1" class="flag hr"
+                                 data-i18n="settings#egress-region#select-hr">
+                                Croatia
+                              </a>
+                            </li>
                             <li data-region="HU">
                               <a href="#" tabindex="-1" class="flag hu"
                                  data-i18n="settings#egress-region#select-hu">
                                 Hungary
+                              </a>
+                            </li>
+                            <li data-region="ID">
+                              <a href="#" tabindex="-1" class="flag id"
+                                 data-i18n="settings#egress-region#select-id">
+                                Indonesia
                               </a>
                             </li>
                             <li data-region="IE">
@@ -1342,10 +1360,22 @@
                                 Norway
                               </a>
                             </li>
+                            <li data-region="NZ">
+                              <a href="#" tabindex="-1" class="flag nz"
+                                 data-i18n="settings#egress-region#select-nz">
+                                New Zealand
+                              </a>
+                            </li>
                             <li data-region="PL">
                               <a href="#" tabindex="-1" class="flag pl"
                                  data-i18n="settings#egress-region#select-pl">
                                 Poland
+                              </a>
+                            </li>
+                            <li data-region="PT">
+                              <a href="#" tabindex="-1" class="flag pt"
+                                 data-i18n="settings#egress-region#select-pt">
+                                Portugal
                               </a>
                             </li>
                             <li data-region="RO">
@@ -1382,6 +1412,12 @@
                               <a href="#" tabindex="-1" class="flag tw"
                                  data-i18n="settings#egress-region#select-tw">
                                 Taiwan
+                              </a>
+                            </li>
+                            <li data-region="UA">
+                              <a href="#" tabindex="-1" class="flag ua"
+                                 data-i18n="settings#egress-region#select-ua">
+                                Ukraine
                               </a>
                             </li>
                             <li data-region="US">
