New server regions and updated translations

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1222,6 +1222,12 @@
                                 Chile
                               </a>
                             </li>
+                            <li data-region="CO">
+                              <a href="#" tabindex="-1" class="flag co"
+                                 data-i18n="settings#egress-region#select-co">
+                                Colombia
+                              </a>
+                            </li>
                             <li data-region="CZ">
                               <a href="#" tabindex="-1" class="flag cz"
                                  data-i18n="settings#egress-region#select-cz">
@@ -1274,6 +1280,12 @@
                               <a href="#" tabindex="-1" class="flag gr"
                                  data-i18n="settings#egress-region#select-gr">
                                 Greece
+                              </a>
+                            </li>
+                            <li data-region="HK">
+                              <a href="#" tabindex="-1" class="flag hk"
+                                 data-i18n="settings#egress-region#select-hk">
+                                Hong Kong
                               </a>
                             </li>
                             <li data-region="HR">
@@ -1346,6 +1358,12 @@
                               <a href="#" tabindex="-1" class="flag mx"
                                  data-i18n="settings#egress-region#select-mx">
                                 Mexico
+                              </a>
+                            </li>
+                            <li data-region="MY">
+                              <a href="#" tabindex="-1" class="flag my"
+                                 data-i18n="settings#egress-region#select-my">
+                                Malaysia
                               </a>
                             </li>
                             <li data-region="NL">
