add Lithuania as server egress region

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -1348,6 +1348,12 @@
                                 Korea
                               </a>
                             </li>
+                            <li data-region="LT">
+                              <a href="#" tabindex="-1" class="flag lt"
+                                 data-i18n="settings#egress-region#select-lt">
+                                Lithuania
+                              </a>
+                            </li>
                             <li data-region="LV">
                               <a href="#" tabindex="-1" class="flag lv"
                                  data-i18n="settings#egress-region#select-lv">
@@ -2106,6 +2112,12 @@
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-KR" value="KR">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-KR">KR</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-LT" value="LT">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-LT">LT</label>
               </div>
             </div>
             <div class="checkbox-container">
